--- a/index.html
+++ b/index.html
@@ -1,10 +1,53 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+
 <head>
-  <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/js-sha256@0.9.0/build/sha256.min.js"></script> <!-- jsSHA Library -->
+    <title>How to?</title>
 </head>
+
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+    <div class="bg">
+        <h1>How to?</h1>
+        <h2 id="date-time"></h2>
+        <div id="login-screen">
+            <h2>Enter Secret Code</h2>
+            <input type="password" id="secret-input" placeholder="Enter code">
+            <button onclick="checkSecret()">Submit</button>
+        </div>
+        <table id="secure-table">
+            <tr>
+                <td onclick="updateContent(event, 'Details about Image 1')"><img src="pictures/mongdb.webp"
+                        alt="Image 1">
+    </div>
+    </td>
+    </tr>
+    <tr>
+        <td onclick="updateContent(event, 'Details about Image 1')"><img src="pictures/postgre.png" alt="Image 2"></div>
+        </td>
+    </tr>
+    <tr>
+        <td onclick="updateContent(event, 'Details about Image 1')"><img src="pictures/certificates.png" alt="Image 3">
+            </div>
+        </td>
+    </tr>
+    </table>
+    <!-- Content Display Area -->
+    <div id="content-area">Click on an image to see content here</div>
+
+    <h2>Enter Secret to Hash:</h2>
+    <input type="text" id="input-secret" placeholder="Enter secret">
+    <button onclick="hashSecret()">Generate Hash</button>
+    <p id="hash-output"></p>
+    </div>
+
+    <script src="main.js" type="text/javascript"></script>
+
 </body>
+
+
 </html>
