--- a/index.html
+++ b/index.html
@@ -23,26 +23,26 @@
             <tr>
                 <td onclick="updateContent(event, 'Details about Image 1')"><img src="pictures/mongdb.webp"
                         alt="Image 1">
-    </div>
-    </td>
-    </tr>
-    <tr>
-        <td onclick="updateContent(event, 'Details about Image 1')"><img src="pictures/postgre.png" alt="Image 2"></div>
-        </td>
-    </tr>
-    <tr>
-        <td onclick="updateContent(event, 'Details about Image 1')"><img src="pictures/certificates.png" alt="Image 3">
-            </div>
-        </td>
-    </tr>
-    </table>
-    <!-- Content Display Area -->
-    <div id="content-area">Click on an image to see content here</div>
+                </td>
+            </tr>
+            <tr>
+                <td onclick="updateContent(event, 'Details about Image 1')"><img src="pictures/postgre.png"
+                        alt="Image 2">
+                </td>
+            </tr>
+            <tr>
+                <td onclick="updateContent(event, 'Details about Image 1')"><img src="pictures/certificates.png"
+                        alt="Image 3">
+                </td>
+            </tr>
+        </table>
+        <!-- Content Display Area -->
+        <div id="content-area">Click on an image to see content here</div>
 
-    <h2>Enter Secret to Hash:</h2>
-    <input type="text" id="input-secret" placeholder="Enter secret">
-    <button onclick="hashSecret()">Generate Hash</button>
-    <p id="hash-output"></p>
+        <h2>Enter Secret to Hash:</h2>
+        <input type="text" id="input-secret" placeholder="Enter secret">
+        <button onclick="hashSecret()">Generate Hash</button>
+        <p id="hash-output"></p>
     </div>
 
     <script src="main.js" type="text/javascript"></script>
