--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
                 </td>
             </tr>
             <tr>
-                <td onclick="updateContent(event, 'Details about Image 1')"><img src="pictures/postgre.png"
+                <td onclick="updateContent(event, 'postgresql.html')"><img src="pictures/postgre.png"
                         alt="Image 2">
                 </td>
             </tr>
             <tr>
-                <td onclick="updateContent(event, 'Details about Image 1')"><img src="pictures/certificates.png"
+                <td onclick="updateContent(event, 'certificate.html')"><img src="pictures/certificates.png"
                         alt="Image 3">
                 </td>
             </tr>
         </table>
         <!-- Content Display Area -->
         <div id="content-area"
-            style="display: none; position: absolute; background: white; border: 1px solid black; padding: 10px;">
+            style="display: none; position: absolute; background: white; border: 1px solid black; padding: 30px;">
         </div>
 
         <div class="right-aligned">
