--- a/index.html
+++ b/index.html
@@ -12,8 +12,9 @@
 
 <body>
     <div class="bg">
-        <h1>How to?</h1>
         <h2 id="date-time"></h2>
+        <h1>Your IP Address is:</h1>
+        <p id="ip-address"></p>
         <div id="login-screen">
             <h2>Enter Secret Code</h2>
             <input type="password" id="secret-input" placeholder="Enter code">
