--- a/index.html
+++ b/index.html
@@ -35,10 +35,15 @@
                         alt="Image 3">
                 </td>
             </tr>
+            <tr>
+                <td onclick="updateContent(event, 'kubernetes.html')"><img src="pictures/kube.png"
+                        alt="Image 3">
+                </td>
+            </tr>
         </table>
         <!-- Content Display Area -->
         <div id="content-area"
-            style="display: none; position: absolute; background: white; border: 1px solid black; padding: 30px;">
+            style="display: none; position: absolute; border: 1px solid black; padding: 30px;">
         </div>
 
         <div class="right-aligned">
