--- a/certificate.html
+++ b/certificate.html
@@ -19,11 +19,16 @@
         </code></span></li>
         <li><span>To check a mTLS connection <code>openssl s_client -connect host:port -cert client.crt -key client.key -CAfile ca_cert.pem
         </code></span></li>
+        <li><span>To get cacerts of a server <code>openssl s_client -showcerts -connect host:port</code></span></li>
     </ul>
     <h2>ssh-keygen</h2>
     <ul>
         <li><span>To generate a pair of ssh keys <code>ssh-keygen -t rsa -b 2048 -f my_ssh_key      </code></span></li>
-    </ul>  
+    </ul>
+    <h2>curl</h2>
+    <ul>
+        <li><span>Very verbose simple curl <code>curl -vvv https://host</code></span></li>
+    </ul>
 </body>
 
 </html>
