--- a/index.html
+++ b/index.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
-    <div class="bg">
         <h2 id="date-time"></h2>
-        <h1>Your IP Address is:</h1>
-        <p id="ip-address"></p>
+        <div class="ip-container">
+            <h1>Your IP Address is:</h1>
+            <p id="ip-address"></p>
+        </div>
         <div id="login-screen">
             <h2>Enter Secret Code</h2>
             <input type="password" id="secret-input" placeholder="Enter code">
@@ -52,7 +53,7 @@
             <button onclick="hashSecret()">Generate Hash</button>
             <p id="hash-output"></p>
         </div>
-    </div>
+
 
     <script src="main.js" type="text/javascript"></script>
 
