--- a/kubernetes.html
+++ b/kubernetes.html
@@ -12,7 +12,7 @@
     <h2>Kubernetes</h2>
     <ul>
         <li><span>To create a busy box <code>kubectl run -n <i>namespace</i> -i --tty busybox --image=461232396433.dkr.ecr.eu-west-1.amazonaws.com/dxp-busybox-152588:latest</code></span></li>
-        <li><span>To scale down all deployments <code>kubectl scale deployment -n <i>namespace</i> – replicas 0 – all</code></span></li>
+        <li><span>To scale down all deployments <code>kubectl scale deployment -n <i>namespace</i> -- replicas=0 -- all</code></span></li>
     </ul>
 </body>
 
