--- a/postgresql.html
+++ b/postgresql.html
@@ -11,10 +11,10 @@
 <body>
     <h2>Postgre SQL</h2>
     <ul>
-        <li><span>To connect the postgre <code>psql -U user_name</code></span></li>
-        <li><span>To list databases <code>\l</code></span></li>
-        <li><span>To connect to a database <code>\c database_name</code></span></li>
-        <li><span>To list tables <code>\dt</code></span></li>
+        <li><span>To connect the postgre </span> <span class="dots"></span><code>psql -U user_name</code></li>
+        <li><span>To list databases </span> <span class="dots"></span><code>\l</code></li>
+        <li><span>To connect to a database </span> <span class="dots"></span><code>\c database_name</code></li>
+        <li><span>To list tables </span> <span class="dots"></span><code>\dt</code></li>
         <li><span>Use sql requests to check database content</span></li>
     </ul>
 </body>
