--- a/index.html
+++ b/index.html
@@ -6,54 +6,66 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/js-sha256@0.9.0/build/sha256.min.js"></script> <!-- jsSHA Library -->
     <title>How to?</title>
 </head>
 
 <body>
-        <h2 id="date-time"></h2>
-        <div class="ip-container">
-            <h1>Your IP Address is:</h1>
-            <p id="ip-address"></p>
-        </div>
-        <div id="login-screen">
-            <h2>Enter Secret Code</h2>
-            <input type="password" id="secret-input" placeholder="Enter code">
-            <button onclick="checkSecret()">Submit</button>
-        </div>
-        <table id="secure-table">
-            <tr>
-                <td onclick="updateContent(event, 'mongodb.html')"><img src="pictures/mongodb.webp" alt="Image 1">
-                </td>
-            </tr>
-            <tr>
-                <td onclick="updateContent(event, 'postgresql.html')"><img src="pictures/postgre.png"
-                        alt="Image 2">
-                </td>
-            </tr>
-            <tr>
-                <td onclick="updateContent(event, 'certificate.html')"><img src="pictures/certificates.png"
-                        alt="Image 3">
-                </td>
-            </tr>
-            <tr>
-                <td onclick="updateContent(event, 'kubernetes.html')"><img src="pictures/kube.png"
-                        alt="Image 3">
-                </td>
-            </tr>
-        </table>
-        <!-- Content Display Area -->
-        <div id="content-area"
-            style="display: none; position: absolute; border: 1px solid black; padding: 30px;">
-        </div>
+    <h2 id="date-time"></h2>
+    <div class="ip-container">
+        <h1>Your IP Address is:</h1>
+        <p id="ip-address"></p>
+    </div>
+    <div id="login-screen">
+        <h2>Enter Secret Code</h2>
+        <input type="password" id="secret-input" placeholder="Enter code">
+        <button onclick="checkSecret()">Submit</button>
+    </div>
+    <table id="secure-table">
+        <tr>
+            <td onclick="updateContent(event, 'mongodb.html')"><img src="pictures/mongodb.webp" alt="Image 1">
+            </td>
+        </tr>
+        <tr>
+            <td onclick="updateContent(event, 'postgresql.html')"><img src="pictures/postgre.png" alt="Image 2">
+            </td>
+        </tr>
+        <tr>
+            <td onclick="updateContent(event, 'certificate.html')"><img src="pictures/certificates.png" alt="Image 3">
+            </td>
+        </tr>
+        <tr>
+            <td onclick="updateContent(event, 'kubernetes.html')"><img src="pictures/kube.png" alt="Image 3">
+            </td>
+        </tr>
+        <tr>
+            <td onclick="updateContent(event, 'helm.html')"><img src="pictures/helm.png" alt="Image 4">
+            </td>
+        </tr>
+    </table>
+    <!-- Content Display Area -->
+    <div id="content-area">
+    </div>
 
-        <div class="right-aligned">
-            <h2>Enter Secret to Hash:</h2>
-            <input type="text" id="input-secret" placeholder="Enter secret">
-            <button onclick="hashSecret()">Generate Hash</button>
-            <p id="hash-output"></p>
-        </div>
+    <div class="right-aligned">
+        <h2>Enter Secret to Hash:</h2>
+        <input type="text" id="input-secret" placeholder="Enter secret">
+        <select id="sha-algorithm">
+            <option value="SHA-1">SHA-1</option>
+            <option value="SHA-256">SHA-256</option>
+            <option value="SHA-384">SHA-384</option>
+            <option value="SHA-512">SHA-512</option>
+        </select>
+        <button onclick="hashSecret()">Generate Hash</button>
+        <p id="hash-output"></p>
+    </div>
 
+    <!-- GitHub Link Icon -->
+    <a href="https://github.com/fvanderbist/WSLtools" target="_blank">
+        <i class="fab fa-github" style="font-size: 30px; color: white;"></i>
+        <p>For usefull bash and Python scripts</p>
+    </a>
 
     <script src="main.js" type="text/javascript"></script>
 
