--- a/kubernetes.html
+++ b/kubernetes.html
@@ -11,8 +11,12 @@
 <body>
     <h2>Kubernetes</h2>
     <ul>
-        <li><span>To create a busy box <code>kubectl run -n <i>namespace</i> -i --tty busybox --image=461232396433.dkr.ecr.eu-west-1.amazonaws.com/dxp-busybox-152588:latest</code></span></li>
-        <li><span>To scale down all deployments <code>kubectl scale deployment -n <i>namespace</i> -- replicas=0 -- all</code></span></li>
+        <li><span>To create a busy box </span> <span class="dots"></span> <code>kubectl run -n <i>namespace</i> -i --tty busybox --image=461232396433.dkr.ecr.eu-west-1.amazonaws.com/dxp-busybox-152588:latest</code></li>
+        <li><span>To open a shell inside a pod </span> <span class="dots"></span> <code>kubectl exec -n <i>namespace</i> -it <i>pod</i> -- /bin/bash</code></li>
+        <li><span>Edit limit range </span> <span class="dots"></span> <code>kubectl -n <i>namespace</i> edit limitranges</code></li>
+        <li><span>To scale down all deployments </span> <span class="dots"></span> <code>kubectl scale deployment -n <i>namespace</i> -- replicas=0 -- all</code></li>
+        <li><span>To list virtual services </span> <span class="dots"></span> <code>kubectl get vs -n <i>namespace</i></code></li>
+        <li><span>To list destination rules </span> <span class="dots"></span> <code>kubectl get dr -n <i>namespace</i></code></li>
     </ul>
 </body>
 
