--- a/mongodb.html
+++ b/mongodb.html
@@ -11,14 +11,14 @@
 <body>
     <h2>MongoDB</h2>
     <ul>
-        <li><span>To show databases <code>show dbs</code></span></li>
-        <li><span>To use a database <code>use database_name</code></span></li>
-        <li><span>To show collections <code>show collections</code></span></li>
-        <li><span>To group by and count <code>db.collection_name.aggregate([
+        <li><span>To show databases </span> <span class="dots"></span><code>show dbs</code></li>
+        <li><span>To use a database </span> <span class="dots"></span><code>use database_name</code></li>
+        <li><span>To show collections </span> <span class="dots"></span><code>show collections</code></li>
+        <li><span>To group by and count </span> <span class="dots"></span><code>db.collection_name.aggregate([
             { $group: { _id: "$city", total: { $sum: 1 } } }
-        ]);</code></span></li>
-        <li><span>To display by order ascending <code>db.collection_name.find().sort({ age: 1 });</code></span></li>
-        <li><span>To display by order descending <code>db.collection_name.find().sort({ age: -1 });</code></span></li>
+        ]);</code></li>
+        <li><span>To display by order ascending </span> <span class="dots"></span><code>db.collection_name.find().sort({ age: 1 });</code></li>
+        <li><span>To display by order descending </span> <span class="dots"></span><code>db.collection_name.find().sort({ age: -1 });</code></li>
     </ul>
 </body>
 
