--- a/index.html
+++ b/index.html
@@ -62,10 +62,12 @@
     </div>
 
     <!-- GitHub Link Icon -->
+     <div>
+    <p>For usefull bash and Python scripts
     <a href="https://github.com/fvanderbist/WSLtools" target="_blank">
         <i class="fab fa-github" style="font-size: 30px; color: white;"></i>
-        <p>For usefull bash and Python scripts</p>
-    </a>
+    </a></p>
+</div>
 
     <script src="main.js" type="text/javascript"></script>
 
