--- a/certificate.html
+++ b/certificate.html
@@ -35,6 +35,7 @@
     <h2>curl</h2>
     <ul>
         <li><span>Very verbose simple curl </span> <span class="dots"></span><code>curl -vvv https://host</code></li>
+        <li><span>Check mTLS </span> <span class="dots"></span><code>curl -X POST/GET  -H "Content-Type: application/json"   https://<i>host</i>/<i>servicePath</i> --cacert cacert.pem --cert cert.pem --key key.key</code></li>
     </ul>
     <h2>nmap</h2>
     <ul>
