--- a/mongodb.html
+++ b/mongodb.html
@@ -14,6 +14,8 @@
         <li><span>To show databases </span> <span class="dots"></span><code>show dbs</code></li>
         <li><span>To use a database </span> <span class="dots"></span><code>use database_name</code></li>
         <li><span>To show collections </span> <span class="dots"></span><code>show collections</code></li>
+        <li><span>To show thec content of a collection </span> <span class="dots"></span><code>db.collection_name.find()
+            MongoDB specificiti</code></li>
         <li><span>To group by and count </span> <span class="dots"></span><code>db.collection_name.aggregate([
             { $group: { _id: "$city", total: { $sum: 1 } } }
         ]);</code></li>
