--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <h2 id="date-time"></h2>
     <div class="ip-container">
         <h1>Your IP Address is:</h1>
-        <p id="ip-address"></p>
+        <h1 id="ip-address"></h1>
     </div>
     <div id="login-screen">
         <h2>Enter Secret Code</h2>
@@ -49,7 +49,7 @@
     </div>
 
     <div class="right-aligned">
-        <h2>Enter Secret to Hash:</h2>
+        <p>Enter Secret to Hash:</p>
         <input type="text" id="input-secret" placeholder="Enter secret">
         <select id="sha-algorithm">
             <option value="SHA-1">SHA-1</option>
