--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <script src="https://cdn.jsdelivr.net/npm/js-sha256@0.9.0/build/sha256.min.js"></script> <!-- jsSHA Library -->
     <title>How to?</title>
 </head>
@@ -24,15 +23,15 @@
     </div>
     <table id="secure-table">
         <tr>
-            <td onclick="updateContent(event, 'mongodb.html')"><img src="pictures/mongodb.webp" alt="Image 1">
-            </td>
-        </tr>
-        <tr>
-            <td onclick="updateContent(event, 'postgresql.html')"><img src="pictures/postgre.png" alt="Image 2">
-            </td>
-        </tr>
-        <tr>
             <td onclick="updateContent(event, 'certificate.html')"><img src="pictures/certificates.png" alt="Image 3">
+            </td>
+        </tr>
+        <tr>
+            <td onclick="updateContent(event, 'helm.html')"><img src="pictures/helm.png" alt="Image 4">
+            </td>
+        </tr>
+        <tr>
+            <td onclick="updateContent(event, 'istio.html')"><img src="pictures/istio.png" alt="Image 4">
             </td>
         </tr>
         <tr>
@@ -40,7 +39,11 @@
             </td>
         </tr>
         <tr>
-            <td onclick="updateContent(event, 'helm.html')"><img src="pictures/helm.png" alt="Image 4">
+            <td onclick="updateContent(event, 'mongodb.html')"><img src="pictures/mongodb.webp" alt="Image 1">
+            </td>
+        </tr>
+        <tr>
+            <td onclick="updateContent(event, 'postgresql.html')"><img src="pictures/postgre.png" alt="Image 2">
             </td>
         </tr>
     </table>
