--- a/kubernetes.html
+++ b/kubernetes.html
@@ -17,6 +17,7 @@
         <li><span>To scale down all deployments </span> <span class="dots"></span> <code>kubectl scale deployment -n <i>namespace</i> -- replicas=0 -- all</code></li>
         <li><span>To list virtual services </span> <span class="dots"></span> <code>kubectl get vs -n <i>namespace</i></code></li>
         <li><span>To list destination rules </span> <span class="dots"></span> <code>kubectl get dr -n <i>namespace</i></code></li>
+        <li><span>To list all ingress </span> <span class="dots"></span> <code>kubectl get ingress -A</i></code></li>
     </ul>
     <h2>Redis</h2>
     <ul>
