--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
         <h1>Your IP Address is:</h1>
         <h1 id="ip-address"></h1>
     </div>
+    <div id="info-box">
+        <p id="incognito-status">Incognito: Checking...</p>
+        <p id="latency-status">Latency: Checking...</p>
+    </div>
     <div id="login-screen">
         <h2>Enter Secret Code</h2>
         <input type="password" id="secret-input" placeholder="Enter code">
