--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
         <h1 id="ip-address"></h1>
     </div>
     <div id="info-box">
-        <p id="incognito-status">Incognito: Checking...</p>
         <p id="latency-status">Latency: Checking...</p>
+        <p id="connection-type">Connection Type: Checking...</p>
+        <p id="downlink-speed">Downlink Speed: Checking...</p>
+        <p id="effective-connection-type">Effective Connection Type: Checking...</p>
     </div>
     <div id="login-screen">
         <h2>Enter Secret Code</h2>
