--- a/index.html
+++ b/index.html
@@ -11,16 +11,19 @@
 </head>
 
 <body>
-    <h2 id="date-time"></h2>
-    <div class="ip-container">
-        <h1>Your IP Address is:</h1>
-        <h1 id="ip-address"></h1>
-    </div>
-    <div id="info-box">
-        <p id="latency-status">Latency: Checking...</p>
-        <p id="connection-type">Connection Type: Checking...</p>
-        <p id="downlink-speed">Downlink Speed: Checking...</p>
-        <p id="effective-connection-type">Effective Connection Type: Checking...</p>
+    <div class="network-info-container">
+        
+        <div class="ip-container">
+            <h2 id="date-time"></h2>
+            <h1>Your IP Address is:</h1>
+            <h1 id="ip-address"></h1>
+        </div>
+        <div id="info-box">
+            <p id="latency-status">Latency: Checking...</p>
+            <p id="connection-type">Connection Type: Checking...</p>
+            <p id="downlink-speed">Downlink Speed: Checking...</p>
+            <p id="effective-connection-type">Effective Connection Type: Checking...</p>
+        </div>
     </div>
     <div id="login-screen">
         <h2>Enter Secret Code</h2>
