--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
 
 <body>
     <div class="network-info-container">
-        
         <div class="ip-container">
             <h2 id="date-time"></h2>
             <h1>Your IP Address is:</h1>
@@ -77,7 +76,7 @@
      <div>
     <p>For usefull bash and Python scripts
     <a href="https://github.com/fvanderbist/WSLtools" target="_blank">
-        <i class="fab fa-github" style="font-size: 30px; color: white;"></i>
+        <i class="fab fa-github" style="font-size: 30px; color: black;"></i>
     </a></p>
 </div>
 
