--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
             <h1 id="ip-address"></h1>
         </div>
         <div id="info-box">
-            <p id="latency-status">Latency: Checking...</p>
-            <p id="connection-type">Connection Type: Checking...</p>
-            <p id="downlink-speed">Downlink Speed: Checking...</p>
-            <p id="effective-connection-type">Effective Connection Type: Checking...</p>
+            <p style="color:yellow;" id="latency-status">Latency: Checking...</p>
+            <p style="color:yellow;" id="connection-type">Connection Type: Checking...</p>
+            <p style="color:yellow;" id="downlink-speed">Downlink Speed: Checking...</p>
+            <p style="color:yellow;" id="effective-connection-type">Effective Connection Type: Checking...</p>
         </div>
     </div>
     <div id="login-screen">
