--- a/postgresql.html
+++ b/postgresql.html
@@ -11,7 +11,7 @@
 <body>
     <h2>Postgre SQL</h2>
     <ul>
-        <li><span>To connect the postgre </span> <span class="dots"></span><code>psql -U user_name</code></li>
+        <li><span>To connect the postgre </span> <span class="dots"></span><code>psql -d postgres -h <i>POSTGRESQL_HOST</i> -p <i>PORT</i> -U <i>USERNAME</i></code></li>
         <li><span>To list databases </span> <span class="dots"></span><code>\l</code></li>
         <li><span>To connect to a database </span> <span class="dots"></span><code>\c database_name</code></li>
         <li><span>To list tables </span> <span class="dots"></span><code>\dt</code></li>
