--- a/kubernetes.html
+++ b/kubernetes.html
@@ -14,7 +14,9 @@
         <li><span>To create a busy box </span> <span class="dots"></span> <code>kubectl run -n <i>namespace</i> -i --tty busybox --image=461232396433.dkr.ecr.eu-west-1.amazonaws.com/dxp-busybox-152588:latest</code></li>
         <li><span>To open a shell inside a pod </span> <span class="dots"></span> <code>kubectl exec -n <i>namespace</i> -it <i>pod</i> -- /bin/bash</code></li>
         <li><span>Edit limit range </span> <span class="dots"></span> <code>kubectl -n <i>namespace</i> edit limitranges</code></li>
-        <li><span>To scale down all deployments </span> <span class="dots"></span> <code>kubectl scale deployment -n <i>namespace</i> -- replicas=0 -- all</code></li>
+        <li><span>To scale up/down all deployments </span> <span class="dots"></span> <code>kubectl scale deployment -n <i>namespace</i> --replicas=0 --all</code></li>
+        <li><span>Same in case of HPA </span> <span class="dots"></span> <code>kubectl get hpa -n <i>namespace</i> -o name | xargs -I{} kubectl patch {} -n <i>namespace</i> --type='merge' -p '{"spec":{"minReplicas":2}}'</code></li>
+        <li><span>Set up PDB correctly </span> <span class="dots"></span> <code>kubectl get pdb -n <i>namespace</i> -o name | xargs -I{} kubectl patch {} -n <i>namespace</i> --type='merge' -p '{"spec":{"minAvailable":"50%"}}'</code></li>
         <li><span>To list virtual services </span> <span class="dots"></span> <code>kubectl get vs -n <i>namespace</i></code></li>
         <li><span>To list destination rules </span> <span class="dots"></span> <code>kubectl get dr -n <i>namespace</i></code></li>
         <li><span>To list all ingress </span> <span class="dots"></span> <code>kubectl get ingress -A</i></code></li>
