--- a/certificate.html
+++ b/certificate.html
@@ -26,7 +26,7 @@
               <li><span>then with the key</span><span class="dots"></span><code>openssl rsa -noout -modulus -in tls.key | openssl md5</code></li>
             </ul>
         </li>
-
+        <li><span>To check if it is a self-signed certificat (if both are identical)</span> <span class="dots"></span><code>openssl x509 -in certificat.pem -noout -subject -issuer</code></li>
     </ul>
     <h2>ssh-keygen</h2>
     <ul>
