--- a/index.html
+++ b/index.html
@@ -31,6 +31,10 @@
     </div>
     <table id="secure-table">
         <tr>
+            <td onclick="updateContent(event, 'linux.html')"><img src="pictures/linux.png" alt="Image 3">
+            </td>
+        </tr>
+        <tr>
             <td onclick="updateContent(event, 'certificate.html')"><img src="pictures/certificates.png" alt="Image 3">
             </td>
         </tr>
