--- a/linux.html
+++ b/linux.html
@@ -11,8 +11,7 @@
 <body>
     <h2>Linux</h2>
     <ul>
-        <li><span>Check if a server (and port) is up using bash only:</span> <span class="dots"></span> <code>echo > /dev/tcp/<hostname_or_ip>/<port> && echo "UP" || echo "DOWN"
-        </code></li>
+        <li><span>Check if a server (and port) is up using bash only:</span> <span class="dots"></span> <code>echo > /dev/tcp/&lt;hostname_or_ip&gt;/&lt;port&gt; && echo "UP" || echo "DOWN" </code></li>
     </ul>
 </body>
 
