--- a/kubernetes.html
+++ b/kubernetes.html
@@ -46,6 +46,17 @@
                 </pre></li>
         </ul>
     </ul>
+    <h2>Ingress</h2>
+    <ul>
+        <li> <span>Ingress Process</span>
+            <ul>
+                <li><span>to find any ingress exposition rules (check secret inside)</span><span class="dots"></span><code>kubectl get ingress -A</code></li>
+                <li><span>to find out which Ingress Controller will manage which Ingress.</span><span class="dots"></span><code>kubectl get ingressclass</code></li>
+                <li><span>...and the Ingress Controller is the “driver” who follows this plan and keeps traffic flowing.</span></li>
+            </ul>
+        </li>
+        </li>
+    </ul>
 </body>
 
 </html>
