Test for scripts

--- a/index.html
+++ b/index.html
@@ -31,15 +31,15 @@
     </div>
     <table id="secure-table">
         <tr>
-            <td onclick="updateContent(event, 'linux.html')"><img src="pictures/linux.png" alt="Image 3">
+            <td onclick="updateContent(event, 'linux.html')"><img src="pictures/linux.png" alt="Image 1">
             </td>
         </tr>
         <tr>
-            <td onclick="updateContent(event, 'certificate.html')"><img src="pictures/certificates.png" alt="Image 3">
+            <td onclick="updateContent(event, 'certificate.html')"><img src="pictures/certificates.png" alt="Image 2">
             </td>
         </tr>
         <tr>
-            <td onclick="updateContent(event, 'helm.html')"><img src="pictures/helm.png" alt="Image 4">
+            <td onclick="updateContent(event, 'helm.html')"><img src="pictures/helm.png" alt="Image 3">
             </td>
         </tr>
         <tr>
@@ -47,15 +47,19 @@
             </td>
         </tr>
         <tr>
-            <td onclick="updateContent(event, 'kubernetes.html')"><img src="pictures/kube.png" alt="Image 3">
+            <td onclick="updateContent(event, 'kubernetes.html')"><img src="pictures/kube.png" alt="Image 5">
             </td>
         </tr>
         <tr>
-            <td onclick="updateContent(event, 'mongodb.html')"><img src="pictures/mongodb.webp" alt="Image 1">
+            <td onclick="updateContent(event, 'mongodb.html')"><img src="pictures/mongodb.webp" alt="Image 6">
             </td>
         </tr>
         <tr>
-            <td onclick="updateContent(event, 'postgresql.html')"><img src="pictures/postgre.png" alt="Image 2">
+            <td onclick="updateContent(event, 'postgresql.html')"><img src="pictures/postgre.png" alt="Image 7">
+            </td>
+        </tr>
+        <tr>
+            <td onclick="updateContent(event, 'postgresql.html')"><img src="pictures/bash.png" alt="Image 8">
             </td>
         </tr>
     </table>
