Test for scripts

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             </td>
         </tr>
         <tr>
-            <td onclick="updateContent(event, 'postgresql.html')"><img src="pictures/bash.png" alt="Image 8">
+            <td onclick="updateContent(event, 'bashScripts.html')"><img src="pictures/bash.png" alt="Image 8">
             </td>
         </tr>
     </table>
