Test for scripts

--- a/bashScripts.html
+++ b/bashScripts.html
@@ -11,7 +11,7 @@
 <body>
     <h2>Bash Scripts - Certificates</h2>
     <ul>
-        <li><a href="scripts/build_fullchain.sh" download="build_fullchain">
+        <li><a href="scripts/build_fullchain" download="build_fullchain">
             To retrieve full chain. Run the script and paste the certificate pem file content
         </a></li>
     </ul>
