--- a/bashScripts.html
+++ b/bashScripts.html
@@ -15,6 +15,12 @@
             To retrieve full chain. Run the script and paste the certificate pem file content
         </a></li>
     </ul>
+    <h2>Bash Scripts - Kube logs</h2>
+    <ul>
+        <li><a href="scripts/grep_pod_logs.sh" download="grep_pod_logs.sh">
+            To find "something" in logs of any pods of a namespace (any container). Run grep_pod_logs.sh <i>namespace</i>
+        </a></li>
+    </ul>
 </body>
 
 </html>
