--- a/bashScripts.html
+++ b/bashScripts.html
@@ -9,13 +9,20 @@
 </head>
 
 <body>
-    <h2>Bash Scripts - Certificates</h2>
+    <h1>Bash Scripts</h1>
+    <h2> - fort Certificate</h2>
     <ul>
-        <li><a href="scripts/build_fullchain" download="build_fullchain">
+        <li><a href="scripts/build_fullchain.sh" download="build_fullchain.sh">
             To retrieve full chain. Run the script and paste the certificate pem file content
         </a></li>
     </ul>
-    <h2>Bash Scripts - Kube logs</h2>
+    <h2> - for kubernetes in general</h2>
+    <ul>
+        <li><a href="scripts/getVersion.sh" download="getVersion.sh">
+            To get the version of a service deployed on the cluster. Run getVersion.sh <i>namespace</i>
+        </a></li>
+    </ul>
+    <h2> - for kubernetes logs</h2>
     <ul>
         <li><a href="scripts/grep_pod_logs.sh" download="grep_pod_logs.sh">
             To find "something" in logs of any pods of a namespace (any container). Run grep_pod_logs.sh <i>namespace</i>
