--- a/bashScripts.html
+++ b/bashScripts.html
@@ -22,6 +22,11 @@
             To get the version of a service deployed on the cluster. Run getVersion.sh <i>namespace</i>
         </a></li>
     </ul>
+    <ul>
+        <li><a href="scripts/listSecrets.sh" download="listSecrets.sh">
+            To list all secrets used by any service. Run listSecrets.sh <i>namespace</i>
+        </a></li>
+    </ul>
     <h2> - for kubernetes logs</h2>
     <ul>
         <li><a href="scripts/grep_pod_logs.sh" download="grep_pod_logs.sh">
