--- a/bashScripts.html
+++ b/bashScripts.html
@@ -10,7 +10,7 @@
 
 <body>
     <h1>Bash Scripts</h1>
-    <h2> - fort Certificate</h2>
+    <h2> - for Certificate</h2>
     <ul>
         <li><a href="scripts/build_fullchain.sh" download="build_fullchain.sh">
             To retrieve full chain. Run the script and paste the certificate pem file content
