--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
             <td onclick="updateContent(event, 'bashScripts.html')"><img src="pictures/bash.png" alt="Image 8">
             </td>
         </tr>
+        <tr>
+            <td onclick="updateContent(event, 'pythonScripts.html')"><img src="pictures/python.svg" alt="Image 8">
+            </td>
+        </tr>
     </table>
     <!-- Content Display Area -->
     <div id="content-area">
