--- a/bashScripts.html
+++ b/bashScripts.html
@@ -12,24 +12,24 @@
     <h1>Bash Scripts</h1>
     <h2> - for Certificate</h2>
     <ul>
-        <li><a href="scripts/build_fullchain.sh" download="build_fullchain.sh">
+        <li><a href="scripts/build_fullchain.sh" download="build_fullchain.sh" class="lien-blanc">>
             To retrieve full chain. Run the script and paste the certificate pem file content
         </a></li>
     </ul>
     <h2> - for kubernetes in general</h2>
     <ul>
-        <li><a href="scripts/getVersion.sh" download="getVersion.sh">
+        <li><a href="scripts/getVersion.sh" download="getVersion.sh" class="lien-blanc">>
             To get the version of a service deployed on the cluster. Run getVersion.sh <i>namespace</i>
         </a></li>
     </ul>
     <ul>
-        <li><a href="scripts/listSecrets.sh" download="listSecrets.sh">
+        <li><a href="scripts/listSecrets.sh" download="listSecrets.sh" class="lien-blanc">>
             To list all secrets used by any service. Run listSecrets.sh <i>namespace</i>
         </a></li>
     </ul>
     <h2> - for kubernetes logs</h2>
     <ul>
-        <li><a href="scripts/grep_pod_logs.sh" download="grep_pod_logs.sh">
+        <li><a href="scripts/grep_pod_logs.sh" download="grep_pod_logs.sh" class="lien-blanc">>
             To find "something" in logs of any pods of a namespace (any container). Run grep_pod_logs.sh <i>namespace</i>
         </a></li>
     </ul>
