--- a/pythonScripts.html
+++ b/pythonScripts.html
@@ -12,7 +12,7 @@
     <h1>Python Scripts</h1>
     <h2> - for secrets</h2>
     <ul>
-        <li><a href="scripts/getAllSecretsInBase64.py" download="getAllSecretsInBase64.py">
+        <li><a href="python/getAllSecretsInBase64.py" download="getAllSecretsInBase64.py" class="lien-blanc">
             To extract any secrets values from a cluster in base64. Run python getAllSecretsInBase64.py <i>namespace</i>
         </a></li>
     </ul>
