--- a/bashScripts.html
+++ b/bashScripts.html
@@ -19,18 +19,18 @@
     <h2> - for kubernetes in general</h2>
     <ul>
         <li><a href="scripts/getVersion.sh" download="getVersion.sh" class="lien-blanc">
-            To get the version of a service deployed on the cluster. Run getVersion.sh <i>namespace</i>
+            To get the version of a service deployed on the cluster. <b>Run getVersion.sh <i>namespace</i></b>
         </a></li>
     </ul>
     <ul>
         <li><a href="scripts/listSecrets.sh" download="listSecrets.sh" class="lien-blanc">
-            To list all secrets used by any service. Run listSecrets.sh <i>namespace</i>
+            To list all secrets used by any service. Run <b>listSecrets.sh <i>namespace</i></b>
         </a></li>
     </ul>
     <h2> - for kubernetes logs</h2>
     <ul>
         <li><a href="scripts/grep_pod_logs.sh" download="grep_pod_logs.sh" class="lien-blanc">
-            To find "something" in logs of any pods of a namespace (any containers). Run grep_pod_logs.sh <i>namespace</i>
+            To find "something" in logs of any pods of a namespace (any containers). Run <b>grep_pod_logs.sh <i>namespace</i></b>
         </a></li>
     </ul>
 </body>
