--- a/pythonScripts.html
+++ b/pythonScripts.html
@@ -13,7 +13,7 @@
     <h2> - for secrets</h2>
     <ul>
         <li><a href="python/getAllSecretsInBase64.py" download="getAllSecretsInBase64.py" class="lien-blanc">
-            To extract any secrets values from a cluster in base64. Run python getAllSecretsInBase64.py <i>namespace</i>
+            To extract any secrets values from a cluster in base64. Run <b>python getAllSecretsInBase64.py <i>namespace</i></b>
         </a></li>
     </ul>
     <h2> - for keystore and trustore</h2>
